add all functionality

--- a/github-search/src/App.scss
+++ b/github-search/src/App.scss
@@ -78,6 +78,11 @@ body {
         }
       }
     }
+    .response-status {
+      margin: auto;
+      font-size: x-large;
+      color: coral;
+    }
     .repos {
       @include flexbox(row, space-evenly, none);
       flex-wrap: wrap;
